# ordinal

./: .travis.yml  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml  lint.yml  test.yml
src/: lib.rs
