[package]
name = "ordinal"
version = "0.3.1" # remember to update html_root_url
edition = "2021"
license = "MPL-2.0"
description = "Formatting of ordinals (1st, 2nd, 3rd etc)"
documentation = "https://docs.rs/ordinal"
readme = "README.md"

[dependencies]
num-integer = "0.1"

[dev-dependencies]
num-bigint = "0.4.3"
num-traits = "0.2"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
